api_pagos/pago.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pago
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pago
  template:
    metadata:
      labels:
        app: pago
    spec:
      containers:
      - name: pago
        image: pago:1.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: pago
spec:
  type: ClusterIP
  selector:
    app: pago
  ports:
  - port: 8080
    targetPort: 8080
